--- a/src/styles/_theme-colors.scss
+++ b/src/styles/_theme-colors.scss
@@ -108,20 +108,20 @@ $_palettes: (
   ),
   error: (
     0: #000000,
-    10: #410002,
-    20: #690005,
-    25: #7e0007,
-    30: #93000a,
-    35: #a80710,
-    40: #ba1a1a,
-    50: #de3730,
-    60: #ff5449,
-    70: #ff897d,
-    80: #ffb4ab,
-    90: #ffdad6,
-    95: #ffedea,
-    98: #fff8f7,
-    99: #fffbff,
+    10: #2e0a08,
+    20: #5c1410,
+    25: #731a14,
+    30: #8a1e18,
+    35: #a1241c,
+    40: #b82820,
+    50: #c94736,
+    60: #d96e5c,
+    70: #e99582,
+    80: #f9bca8,
+    90: #ffdfd0,
+    95: #ffeae3,
+    98: #fff4f1,
+    99: #fff8f6,
     100: #ffffff,
   ),
 );
