--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ html {
   @include mat.theme((
     color: (
       primary: my-theme.$primary-palette,
-      tertiary: my-theme.$tertiary-palette,
+      tertiary: my-theme.$tertiary-palette
     ),
     typography: (
       plain-family: Public Sans,
@@ -21,8 +21,13 @@ html {
   ));
 }/* You can add global styles to this file, and also import other style files */
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
-  font: var(--mat-sys-body-large)
+  font: var(--mat-sys-body-large);
+  font-size: 100%;
 }
 html, body { height: 100%; }
 body { margin: 0 }
