--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,11 @@
   <!-- Header Section (Graphic and Description) -->
 
   <header class="home__header">
+    <h1 class="visually-hidden">Personal Finance App</h1>
     <div class="home__info">
-      <div class="home__illustration">
-        <p class="home__figcaption">
+      <img src="assets/logo-large.svg" alt="Personal Finance App Logo" class="home__logo">
+      <div class="home__message">
+        <p class="home__message__text">
           Keep track of your money and save for your future
         </p>
       </div>
